# montessori-cortina

./: LICENSE  README.md  manage.py  pyproject.toml
cmc/: urls.py  wsgi.py
cmc/settings/: base.py  dev.py
cmc/static/css/: cmc.css
cmc/templates/: base.html
home/templates/home/: home_page.html  welcome_page.html
