[tool.poetry]
name = "montessori-cortina"
version = "0.1.0"
description = ""
authors = ["Ryan Nevius <ryan@syntarsus.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
wagtail = "^2.9"
django = "^3.0.7"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
